--- a/indexbonito.html
+++ b/indexbonito.html
@@ -149,10 +149,10 @@
 
    
     <div class="section button-section">
-    <a href="creadores.html" class="button"> <font color="#FFFFFF">Creadores</font></a>
-        <a href="linea.html" class="button"><font color="#FFFFFF">Linea temporal de las IA</font></a>
-        <a href="impactadaquede.html" class="button"><font color="#FFFFFF">Impacto de las IA</font></a>
-        <a href="comoseusan.html" class="button"><font color="#FFFFFF">¿Cómo se usan?</font></a>
+    <a href="creadores.html">creadores</a>
+        <a href="linea.html">linea temporal</a>
+        <a href="impactadaquede.html">impactos</a>
+        <a href="comoseusan.html">uso adecuado</a>
     </div>
 
     <hr size="2px" color="black" />
